--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/ConnectDB/Model.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/ConnectDB/Model.csproj
@@ -57,12 +57,6 @@
     <Reference Include="K4os.Hash.xxHash, Version=1.0.6.0, Culture=neutral, PublicKeyToken=32cd54395057cec3, processorArchitecture=MSIL">
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.8.0.31\lib\net452\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data.EntityFramework, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.EntityFramework.8.0.31\lib\net452\MySql.Data.EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -83,6 +77,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -91,12 +86,28 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="ZstdNet, Version=1.4.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.8.0.31\lib\net452\ZstdNet.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CauHinh.cs" />
+    <Compile Include="EF\account_admin.cs" />
+    <Compile Include="EF\account_customer.cs" />
+    <Compile Include="EF\bill.cs" />
+    <Compile Include="EF\bill_detail.cs" />
+    <Compile Include="EF\city.cs" />
+    <Compile Include="EF\comment_news.cs" />
+    <Compile Include="EF\contact.cs" />
+    <Compile Include="EF\infor_web.cs" />
+    <Compile Include="EF\Model.cs" />
+    <Compile Include="EF\news.cs" />
+    <Compile Include="EF\price_product.cs" />
+    <Compile Include="EF\product.cs" />
+    <Compile Include="EF\role_admin.cs" />
+    <Compile Include="EF\sold_product.cs" />
+    <Compile Include="EF\status_acc.cs" />
+    <Compile Include="EF\status_bill.cs" />
+    <Compile Include="EF\status_product.cs" />
+    <Compile Include="EF\supplier.cs" />
+    <Compile Include="EF\type_product.cs" />
     <Compile Include="KetNoi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -107,7 +118,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dao\" />
-    <Folder Include="EF\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
