cap nhat giao dien

--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
@@ -139,8 +139,59 @@
     <Content Include="Assets\admin\vendor\jquery\jquery-3.2.1.min.js" />
     <Content Include="Assets\admin\vendor\plugins\chart.js" />
     <Content Include="Assets\admin\vendor\plugins\pace.min.js" />
+    <Content Include="Assets\images\dung_cu\binh-thi-nghiem-1.png" />
+    <Content Include="Assets\images\dung_cu\giay-loc-dinh-luong-1.png" />
+    <Content Include="Assets\images\dung_cu\giay-loc-dinh-tinh-1.png" />
+    <Content Include="Assets\images\dung_cu\ong-nghiem-1.jpg" />
+    <Content Include="Assets\images\dung_cu\ong-nghiem-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\aas-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\acetic-acid.jpg" />
+    <Content Include="Assets\images\hoa_chat\acid-huu-co-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\acid-vo-co-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\axit-sunfuric.jpg" />
+    <Content Include="Assets\images\hoa_chat\bazo-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\calcium-chloride-dihydrate.jpg" />
+    <Content Include="Assets\images\hoa_chat\calcium-hydroxide.jpg" />
+    <Content Include="Assets\images\hoa_chat\chi-thi-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\chi-thi-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\dung-dich-dem-1.png" />
+    <Content Include="Assets\images\hoa_chat\dung-dich-dem-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\dung-moi-gc-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\dung-moi-thong-thuong-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\extran-01.jpg" />
+    <Content Include="Assets\images\hoa_chat\hidrocacbon-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\hidrocacbon-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\hoa-chat-moi-truong-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\hoa-sinh-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\hydrochloric.jpg" />
+    <Content Include="Assets\images\hoa_chat\icp-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\muoi-huu-co-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\muoi-vo-co-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\oleanolic-acid.jpg" />
+    <Content Include="Assets\images\hoa_chat\phenolphthalein.jpg" />
+    <Content Include="Assets\images\hoa_chat\sigma-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\sodium-hydroxide.jpg" />
+    <Content Include="Assets\images\hoa_chat\sodium-sulfite.jpg" />
+    <Content Include="Assets\images\hoa_chat\thioglycolat-broth.jpg" />
+    <Content Include="Assets\images\hoa_chat\thuoc-thu-1.jpg" />
+    <Content Include="Assets\images\hoa_chat\thuoc-thu-2.jpg" />
+    <Content Include="Assets\images\hoa_chat\water-with-trifluoroacetic-acid.png" />
+    <Content Include="Assets\images\thiet_bi\kinh-hien-vi-sinh-hoc-1.jpg" />
+    <Content Include="Assets\images\thiet_bi\kinh-huynh-quang-1.jpg" />
+    <Content Include="Assets\images\thiet_bi\kinh-noi-soi-noi-1.png" />
+    <Content Include="Assets\images\thiet_bi\lo-nung-duoi-1000-1.jpg" />
+    <Content Include="Assets\images\thiet_bi\lo-nung-tren-1000-1.jpg" />
+    <Content Include="Assets\images\thiet_bi\may-cat-nuoc-1.jpg" />
+    <Content Include="Assets\images\tin_tuc\100x100\tin_01.jpg" />
+    <Content Include="Assets\images\tin_tuc\100x100\tin_02.jpg" />
+    <Content Include="Assets\images\tin_tuc\100x100\tin_03.png" />
+    <Content Include="Assets\images\tin_tuc\370x300\tin_01.jpg" />
+    <Content Include="Assets\images\tin_tuc\370x300\tin_02.jpg" />
+    <Content Include="Assets\images\tin_tuc\370x300\tin_03.jpg" />
+    <Content Include="Assets\images\tin_tuc\blog-img-950x460.jpg" />
     <Content Include="Assets\shop\css\animate.css" />
     <Content Include="Assets\shop\css\bootstrap.css" />
+    <Content Include="Assets\shop\css\custom.css" />
     <Content Include="Assets\shop\css\flex-slider.min.css" />
     <Content Include="Assets\shop\css\font-awesome.css" />
     <Content Include="Assets\shop\css\jquery-ui.css" />
@@ -192,8 +243,14 @@
     <Compile Include="Areas\AdminRoot\Controllers\AdminRootHomeController.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -225,7 +282,18 @@
     <Content Include="Areas\AdminRoot\Views\AdminRootHome\Settings.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Checkout\Checkout.cshtml" />
+    <Content Include="Views\Contact\Contact.cshtml" />
+    <Content Include="Views\News\News.cshtml" />
+    <Content Include="Views\Products\ListProducts.cshtml" />
+    <Content Include="Views\Products\ProductDetails.cshtml" />
+    <Content Include="Views\Cart\ShoppingCart.cshtml" />
+    <Content Include="Views\Profile\ProfileUser.cshtml" />
+    <Content Include="Views\Share\Layout.cshtml" />
+    <Content Include="Views\Share\LayoutLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
