--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
@@ -66,6 +66,12 @@
       <HintPath>..\packages\K4os.Hash.xxHash.1.0.6\lib\net46\K4os.Hash.xxHash.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.31\lib\net452\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.EntityFramework, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.EntityFramework.8.0.31\lib\net452\MySql.Data.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -99,6 +105,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="ZstdNet, Version=1.4.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.31\lib\net452\ZstdNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -192,7 +201,12 @@
     <Compile Include="Areas\AdminRoot\Controllers\AdminRootHomeController.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\BillsManagerController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProductsManagerController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SalesReportController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SettingsController.cs" />
+    <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
@@ -213,18 +227,24 @@
     <Content Include="Assets\shop\fonts\themify.ttf" />
     <Content Include="Assets\shop\fonts\themify.woff" />
     <Content Include="Areas\Admin\Views\Shared\_LayoutPage.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminHome\BillsManager.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminHome\ProductsManager.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminHome\Settings.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminHome\SalesReport.cshtml" />
     <Content Include="Areas\AdminRoot\Views\web.config" />
     <Content Include="Areas\AdminRoot\Views\Shared\_LayoutPageAdminRoot.cshtml" />
     <Content Include="Areas\AdminRoot\Views\AdminRootHome\AdminRootHome.cshtml" />
     <Content Include="Areas\AdminRoot\Views\AdminRootHome\AdminManager.cshtml" />
     <Content Include="Areas\AdminRoot\Views\AdminRootHome\CustomerManager.cshtml" />
     <Content Include="Areas\AdminRoot\Views\AdminRootHome\Settings.cshtml" />
+    <Content Include="Areas\Admin\Views\BillsManager\BillsManager.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductsManager\ProductsManager.cshtml" />
+    <Content Include="Areas\Admin\Views\SalesReport\SalesReport.cshtml" />
+    <Content Include="Areas\Admin\Views\Settings\Settings.cshtml" />
+    <Content Include="Areas\Admin\Views\Login\Login.cshtml" />
+    <Content Include="Areas\Admin\Views\BillsManager\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\ProductsManager\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SalesReport\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Settings\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminHome\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminHome\AdminHome.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
@@ -232,7 +252,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\AdminRoot\Models\" />
-    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
