--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
@@ -101,14 +101,19 @@
   <ItemGroup>
     <Compile Include="dao\AdminDAO.cs" />
     <Compile Include="dao\CustomerDAO.cs" />
+    <Compile Include="dao\ProductDAO.cs" />
     <Compile Include="db\DBConnection.cs" />
-    <Compile Include="model\Admin.cs" />
-    <Compile Include="model\Customer.cs" />
+    <Compile Include="entity\Admin.cs" />
+    <Compile Include="entity\Customer.cs" />
+    <Compile Include="entity\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="service\AdminService.cs" />
     <Compile Include="service\CustomerService.cs" />
+    <Compile Include="service\ProductService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="utils\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
