--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
@@ -106,6 +106,9 @@
     <Compile Include="entity\Admin.cs" />
     <Compile Include="entity\Customer.cs" />
     <Compile Include="entity\Product.cs" />
+    <Compile Include="entity\StatusProduct.cs" />
+    <Compile Include="entity\Supplier.cs" />
+    <Compile Include="entity\TypeProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="service\AdminService.cs" />
     <Compile Include="service\CustomerService.cs" />
