--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Program/Test.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Program/Test.csproj
@@ -95,8 +95,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dao\TestProductDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="service\TestProductService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
