--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
@@ -1249,6 +1249,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChangePassCustomerModel.cs" />
+    <Compile Include="Models\ConfirmPasswordCustomerModel.cs" />
+    <Compile Include="Models\ForgotPassCustomerModel.cs" />
     <Compile Include="Models\LoginCustomerModel.cs" />
     <Compile Include="Models\RegisterCustomerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -1308,6 +1311,7 @@
     <Content Include="Views\Share\Layout.cshtml" />
     <Content Include="Views\Share\LayoutLogin.cshtml" />
     <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\ConfirmPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
