--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Model/Model.csproj
@@ -101,10 +101,12 @@
   <ItemGroup>
     <Compile Include="dao\AdminDAO.cs" />
     <Compile Include="dao\CustomerDAO.cs" />
+    <Compile Include="dao\NewsDAO.cs" />
     <Compile Include="dao\ProductDAO.cs" />
     <Compile Include="db\DBConnection.cs" />
     <Compile Include="entity\Admin.cs" />
     <Compile Include="entity\Customer.cs" />
+    <Compile Include="entity\News.cs" />
     <Compile Include="entity\Product.cs" />
     <Compile Include="entity\StatusProduct.cs" />
     <Compile Include="entity\Supplier.cs" />
@@ -112,6 +114,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="service\AdminService.cs" />
     <Compile Include="service\CustomerService.cs" />
+    <Compile Include="service\NewsService.cs" />
     <Compile Include="service\ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
