--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
@@ -76,6 +76,12 @@
     <Reference Include="MySql.Data.EntityFramework, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.EntityFramework.8.0.31\lib\net452\MySql.Data.EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -1218,6 +1224,7 @@
     <Content Include="Assets\shop\js\slicknav.min.js" />
     <Content Include="Assets\shop\js\waypoints.min.js" />
     <Content Include="Assets\shop\js\ytplayer.min.js" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -1252,6 +1259,7 @@
     </Compile>
     <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\LoginCustomerModel.cs" />
+    <Compile Include="Models\ProductsModel.cs" />
     <Compile Include="Models\RegisterCustomerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
