--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/packages.config
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.31" targetFramework="net461" />
   <package id="MySql.Data.EntityFramework" version="8.0.31" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
