--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Program/Test.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Program/Test.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dao\TestNewsDAO.cs" />
     <Compile Include="dao\TestProductDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
