--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC.csproj
@@ -1222,6 +1222,7 @@
     <Content Include="Assets\shop\js\popper.min.js" />
     <Content Include="Assets\shop\js\scrollup.js" />
     <Content Include="Assets\shop\js\slicknav.min.js" />
+    <Content Include="Assets\shop\js\update-item-cart.js" />
     <Content Include="Assets\shop\js\waypoints.min.js" />
     <Content Include="Assets\shop\js\ytplayer.min.js" />
     <Content Include="Content\PagedList.css" />
@@ -1257,7 +1258,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\ChangePassCustomerModel.cs" />
     <Compile Include="Models\ConfirmPasswordCustomerModel.cs" />
     <Compile Include="Models\ForgotPassCustomerModel.cs" />
